tg-5258 Modulo AppMaterial dentro de Presentation

--- a/front-end/apps/projects/hospital/src/app/modules/auth/routes/password-reset/password-reset.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/auth/routes/password-reset/password-reset.component.html
@@ -50,7 +50,7 @@
 			<mat-progress-bar mode="indeterminate" *ngIf="apiResponse.loading"></mat-progress-bar>
 			<div class="container" *ngIf="apiResponse.data">
 				<h3 class="mat-h3" translate="auth.password-reset.result.OK"></h3>
-				<h2 class="mat-h2"><code>{{apiResponse.data.email}}</code></h2>
+				<h2 class="mat-h2"><code>{{apiResponse.data.username}}</code></h2>
 			</div>
 			<div class="container" *ngIf="apiResponse.error">
 				<h3 class="mat-h3" translate="auth.password-reset.result.ERROR"></h3>
