--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
@@ -79,7 +79,7 @@
 
 				<ng-template #problemaForm>
 					<form [formGroup]="ambulatoryConsultationProblemsService.getForm()"
-						  (ngSubmit)="this.readOnlyProblema ? this.editProblema(): ambulatoryConsultationProblemsService.addToList()">
+						  (ngSubmit)="this.readOnlyProblema ? this.editProblema(): ambulatoryConsultationProblemsService.addToList(ffIsOn)">
 
 						<mat-form-field appearance="outline">
 							<mat-label [translate]="'ambulatoria.paciente.nueva-consulta.problemas.CONCEPT_LABEL'">
