--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.scss
@@ -27,6 +27,10 @@ mat-form-field {
 		margin-bottom: -5px;
 	}
 	margin-bottom: 10px;
+
+	h5 {
+		margin-block-end: 1em;
+	}
 }
 
 .margin-bottom {
@@ -60,15 +64,17 @@ mat-form-field {
 	font-family: Roboto;
 	font-size: 14px;
 	padding: 20px 10px 20px 16px;
+
 	.text{
 		padding: 0px 0px 0px 0px;
-		 text-align:right;
-
+		text-align:right;
 	}
+
 	.question {
 		display: block;
 		font-weight: 500;
 	}
+
 	.button{
 		padding: 0px 16px 0px 0px;
 		font-size: 16px;
@@ -77,4 +83,8 @@ mat-form-field {
 
 .field-icon{
 	padding: 0px 15px 20px 5px;
+}
+
+.field-icon-vital-sign{
+	padding: 25px 15px 20px 5px;
 }
