tg-5331 [FE] Declara color primario para uso general.

--- a/front-end/apps/projects/hospital/src/assets/styles/mixins.scss
+++ b/front-end/apps/projects/hospital/src/assets/styles/mixins.scss
@@ -67,4 +67,9 @@
 	@include presentation-mixins($theme);
 	@include turnos-mixins($theme);
 	@include historia-clinica-mixins($theme);
+	$palette-primary: map-get($theme, primary);
+
+    .primary{
+        color: mat-color($palette-primary);
+    }
 }
