--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.scss
@@ -88,3 +88,24 @@ mat-form-field {
 .field-icon-vital-sign{
 	padding: 25px 15px 20px 5px;
 }
+
+.referencia {
+	font-family: Roboto, "Helvetica Neue", sans-serif;
+			
+	h2 {
+		font-style: normal;
+		font-weight: 500;
+		font-size: 20px;
+	}
+
+	span {
+		font-size: 16px;
+		font-weight: 500;
+		cursor: pointer;
+	}
+
+	span:hover {
+		text-decoration: underline;
+	}
+}
+
