--- a/front-end/apps/projects/hospital/src/app/modules/extensions/routes/extension/extension.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/extensions/routes/extension/extension.component.html
@@ -1,8 +1,8 @@
 <app-content>
-	<ng-container *ngIf="(page$ | async) as page; else loading">
+	<ng-container *ngIf="!fetching && (page$ | async) as page; else loading">
 		<app-page [page]="page"></app-page>
 	</ng-container>
 	<ng-template #loading>
-		<mat-progress-bar mode="indeterminate"></mat-progress-bar>
+		<app-page></app-page>
 	</ng-template>
 </app-content>
