tg-5230 Separa Extensiones de Presentation

--- a/front-end/apps/projects/hospital/src/app/modules/extensions/components/ui-component-list/ui-component-list.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/extensions/components/ui-component-list/ui-component-list.component.html
@@ -1,3 +1,5 @@
-<div *ngFor="let uiComponent of content" class="regular-space">
+
+<div *ngFor="let uiComponent of list" >
 	<app-ui-component [uiComponent]="uiComponent" ></app-ui-component>
 </div>
+
