--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/profile/profile.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/profile/profile.component.html
@@ -1,46 +1,50 @@
 <app-content width="full">
-    <ng-template #noUserInformation>
-        <p class="no-information" [translate]="'pacientes.user_data.WITHOUT_USER'"></p>
-    </ng-template>
-    <ng-template #noInformation>
-        <span class="no-information" [translate]="'pacientes.user_data.NO_INFO'"></span>
-    </ng-template>
+	<ng-template #noUserInformation>
+		<p class="no-information" [translate]="'pacientes.user_data.WITHOUT_USER'"></p>
+	</ng-template>
+	<ng-template #noInformation>
+		<span class="no-information" [translate]="'pacientes.user_data.NO_INFO'"></span>
+	</ng-template>
 
-    <div *appHasRole="['ADMINISTRATIVO']">
-        <button *ngIf="internmentEpisode?.id" mat-raised-button color="primary" (click)="goInternmentEpisode()">
+	<div *appHasRole="['ADMINISTRATIVO']">
+		<button *ngIf="internmentEpisode?.id" mat-raised-button color="primary" (click)="goInternmentEpisode()">
 			<span class="uppercase">Ver internación</span>
 		</button>
-        <button *ngIf="!internmentEpisode?.inProgress" mat-raised-button color="primary" (click)="goNewInternment()">
+		<button *ngIf="!internmentEpisode?.inProgress" mat-raised-button color="primary" (click)="goNewInternment()">
 			<span class="uppercase">Iniciar internación</span>
 		</button>
-    </div>
-    <div>
-        <div fxFlex="50">
-            <div class="profile-card">
-                <app-patient-card *ngIf="personPhoto" [patient]="patientBasicData" [personPhoto]="personPhoto">
-                    <div header class="header">
-                        <app-patient-type-logo [patientTypeData]="patientTypeData"></app-patient-type-logo>
-                        <ng-container>
-                            <button mat-icon-button color="primary" *appHasRole="['ADMINISTRATIVO']" (click)="goToEditProfile()">
+	</div>
+	<div>
+		<div fxFlex="50">
+			<div class="profile-card">
+				<app-patient-card *ngIf="personPhoto" [patient]="patientBasicData" [personPhoto]="personPhoto">
+					<div header class="header">
+						<app-patient-type-logo [patientTypeData]="patientTypeData"></app-patient-type-logo>
+						<ng-container>
+							<button mat-icon-button color="primary" *appHasRole="['ADMINISTRATIVO']"
+								(click)="goToEditProfile()">
 								<mat-icon>edit</mat-icon>
 							</button>
-                        </ng-container>
-                    </div>
-                    <div content *appHasRole="['ADMINISTRATIVO']">
-                        <button mat-stroked-button color="primary" class="reports" *ngIf="downloadReportIsEnabled" (click)="reports()">
+						</ng-container>
+					</div>
+					<div content *appHasRole="['ADMINISTRATIVO']">
+						<button mat-stroked-button color="primary" class="reports" *ngIf="downloadReportIsEnabled"
+							(click)="reports()">
 							<span class="uppercase">INFORMES</span>
 						</button>
-                    </div>
-                    <div content>
-                        <app-personal-information [personalInformation]="personalInformation" [patientMedicalCoverage]="patientMedicalCoverage">
-                        </app-personal-information>
-                    </div>
-                </app-patient-card>
-            </div>
-            <em *ngIf="!internmentEpisode?.id && internmentEpisode?.inProgress">El paciente se encuentra internado en otra
+					</div>
+					<div content>
+						<app-personal-information [personalInformation]="personalInformation"
+							[patientMedicalCoverage]="patientMedicalCoverage">
+						</app-personal-information>
+					</div>
+				</app-patient-card>
+			</div>
+			<em *ngIf="!internmentEpisode?.id && internmentEpisode?.inProgress">El paciente se encuentra internado en
+				otra
 				institución.</em>
-        </div>
-        <div fxFlex="50" *appHasRole="['ADMINISTRADOR_INSTITUCIONAL_BACKOFFICE']">
+		</div>
+		<div fxFlex="50" *appHasRole="['ADMINISTRADOR_INSTITUCIONAL_BACKOFFICE']">
 			<div *ngIf="createUsersIsEnable">
 				<mat-card class="box user-data">
 					<mat-card-header>
@@ -53,7 +57,8 @@
 						<ng-container *ngIf="!userData?.id">
 							<div fxLayout="row" fxLayoutAlign="center center">
 								<button mat-raised-button color="primary" class="create-user">
-									<span [translate]="'pacientes.user_data.buttons.CREATE_USER'" (click)="addUser()"></span>
+									<span [translate]="'pacientes.user_data.buttons.CREATE_USER'"
+										(click)="addUser()"></span>
 								</button>
 							</div>
 						</ng-container>
@@ -75,11 +80,13 @@
 								</div>
 								<div fxLayout="row" fxLayoutGap="5px">
 									<strong [translate]="'pacientes.user_data.LAST_ACCESS'"></strong>
-									<span *ngIf="userData.lastLogin else noInformation">{{userData.lastLogin | date : 'dd/MM/yyyy - HH:mm'}} hs</span>
+									<span *ngIf="userData.lastLogin else noInformation">{{userData.lastLogin | date :
+										'dd/MM/yyyy - HH:mm'}} hs</span>
 								</div>
 								<div fxLayout="row">
 									<form [formGroup]="form">
-										<mat-slide-toggle color="primary" formControlName="enable" (change)="enableUser()">
+										<mat-slide-toggle color="primary" formControlName="enable"
+											(change)="enableUser()">
 											<span [translate]="'pacientes.user_data.ENABLE'"></span>
 										</mat-slide-toggle>
 									</form>
@@ -104,6 +111,6 @@
 					</mat-card-content>
 				</mat-card>
 			</div>
-        </div>
-    </div>
+		</div>
+	</div>
 </app-content>
