tg-4999. [FE] Refactor y mejoras pendientes del CR

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/external-clinical-histories-filters/external-clinical-histories-filters.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/external-clinical-histories-filters/external-clinical-histories-filters.component.html
@@ -4,12 +4,12 @@
 		<mat-label>
 			{{ 'ambulatoria.paciente.problemas.external-clinical-histories-filters.SEARCH_BY_KEYWORD' | translate }}
 		</mat-label>
-		<input matInput formControlName="keyWord" (change)="sendAllFilters()">
+		<input matInput formControlName="keyWord" (change)="setKeyWordFilter()">
 		<button type="button" matSuffix mat-icon-button>
 			<mat-icon>search</mat-icon>
 		</button>
 		<button type="button" *ngIf="form.value.keyWord?.length > 0" matSuffix color="warn" mat-icon-button
-			(click)="clear(form.controls.keyWord); $event.stopPropagation()">
+			(click)="clear(form.controls.keyWord, 'keyWord'); $event.stopPropagation()">
 			<mat-icon>close</mat-icon>
 		</button>
 	</mat-form-field>
@@ -18,13 +18,13 @@
 		<mat-label>
 			{{ 'ambulatoria.paciente.problemas.external-clinical-histories-filters.SPECIALTY' | translate }}
 		</mat-label>
-		<mat-select formControlName="specialty" (selectionChange)="sendAllFilters()">
+		<mat-select formControlName="specialty" (selectionChange)="setSpecialtyFilter()">
 			<mat-option *ngFor="let specialty of specialties" [value]="specialty">
 				{{ specialty | titlecase }}
 			</mat-option>
 		</mat-select>
 		<button type="button" *ngIf="form.value.specialty" matSuffix color="warn" mat-icon-button
-			(click)="clear(form.controls.specialty); $event.stopPropagation()">
+			(click)="clear(form.controls.specialty, 'specialty'); $event.stopPropagation()">
 			<mat-icon>close</mat-icon>
 		</button>
 	</mat-form-field>
@@ -33,13 +33,13 @@
 		<mat-label>
 			{{ 'ambulatoria.paciente.problemas.external-clinical-histories-filters.PROFESSIONAL' | translate }}
 		</mat-label>
-		<mat-select formControlName="professional" (selectionChange)="sendAllFilters()">
+		<mat-select formControlName="professional" (selectionChange)="setProfessionalFilter()">
 			<mat-option *ngFor="let professional of professionals" [value]="professional">
 				{{ professional | titlecase }}
 			</mat-option>
 		</mat-select>
 		<button type="button" *ngIf="form.value.professional" matSuffix color="warn" mat-icon-button
-			(click)="clear(form.controls.professional); $event.stopPropagation()">
+			(click)="clear(form.controls.professional, 'professional'); $event.stopPropagation()">
 			<mat-icon>close</mat-icon>
 		</button>
 	</mat-form-field>
@@ -48,13 +48,13 @@
 		<mat-label>
 			{{ 'ambulatoria.paciente.problemas.external-clinical-histories-filters.INSTITUTION' | translate }}
 		</mat-label>
-		<mat-select formControlName="institution" (selectionChange)="sendAllFilters()">
+		<mat-select formControlName="institution" (selectionChange)="setInstitutionFilter()">
 			<mat-option *ngFor="let institution of institutions" [value]="institution">
 				{{ institution | titlecase }}
 			</mat-option>
 		</mat-select>
 		<button type="button" *ngIf="form.value.institution" matSuffix color="warn" mat-icon-button
-			(click)="clear(form.controls.institution); $event.stopPropagation()">
+			(click)="clear(form.controls.institution, 'institution'); $event.stopPropagation()">
 			<mat-icon>close</mat-icon>
 		</button>
 	</mat-form-field>
@@ -64,11 +64,11 @@
 			{{ 'ambulatoria.paciente.problemas.external-clinical-histories-filters.CONSULTATION_DATE' | translate }}
 		</mat-label>
 		<input matInput formControlName="consultationDate" [matDatepicker]="myDatepicker"
-			(dateChange)="sendAllFilters()">
+			(dateChange)="setConsultationDateFilter()">
 		<mat-datepicker-toggle matSuffix [for]="myDatepicker"></mat-datepicker-toggle>
 		<mat-datepicker #myDatepicker></mat-datepicker>
 		<button type="button" *ngIf="form.value.consultationDate" matSuffix color="warn" mat-icon-button
-			(click)="clear(form.controls.consultationDate); $event.stopPropagation()">
+			(click)="clear(form.controls.consultationDate, 'consultationDate'); $event.stopPropagation()">
 			<mat-icon>close</mat-icon>
 		</button>
 	</mat-form-field>
